Added pagination to search products api